@@ -1,5 +1,11 @@
 2010-09-11  David Gibson  <david.gibson@analog.com>
 
+	* config/bfin-aux.h (bfin_loop_attempt_create_label): New prototype.
+	* config/bfin-parse.y (LOOP_BEGIN, LOOP_END): Handle numeric labels.
+	* config/tc-bfin.c (bfin_loop_attempt_create_label): New funtion.
+
+2010-09-11  David Gibson  <david.gibson@analog.com>
+
 	* config/tc-bfin.c (bfin_gen_loop): Check symbol before removing.
 
 2010-10-08  Pierre Muller  <muller@ics.u-strasbg.fr>
